Update JwtAuthFilter.java